# Demos

./: .gitignore  CMakeLists.txt  ChangeLog.md  README.md
20180619/: CMakeLists.txt
20180619/CppApplication_2/: IPCInterface.cpp  IPCInterface.h  main.cpp
20180619/DockerApp/: CMakeLists.txt  IPCInterface.cpp  IPCInterface.h  Readme.md  main.cpp
20180619/DockerApp/Resources/: Config.ini
20180619/DockerApp/inc/: IPCClient.h  IPCInterface.h
20180619/DockerApp/src/: GenericClient.cpp  IPCClient.cpp  IPCInterface.cpp  main.cpp
20180619/SimulationApp/: .directory  CMakeLists.txt
20180619/SimulationApp/1WSim/: CMakeLists.txt
20180619/SimulationApp/1WSim/src/: 1WSim.cpp
20180619/SimulationApp/GPIOSim/: CMakeLists.txt
20180619/SimulationApp/GPIOSim/src/: GPIOSim.cpp
20180619/SimulationApp/IPCInterface/: CMakeLists.txt  flexdSimIPC.pc.in
20180619/SimulationApp/IPCInterface/inc/: IPCInterface.h
20180619/SimulationApp/IPCInterface/src/: .IPCInterface.cpp.kate-swp  GenericClient.cpp  IPCInterface.cpp
20180619/SimulationApp/Monitor/: CMakeLists.txt
20180619/SimulationApp/Monitor/src/: Monitor.cpp
20180619/SimulationApp/UARTSim/: CMakeLists.txt
20180619/SimulationApp/UARTSim/inc/: UARTSim.h
20180619/SimulationApp/UARTSim/src/: UART.cpp  UARTSim.cpp  mainUART.cpp
20180619/fleXd1Wired/: CMakeLists.txt
20180619/fleXd1Wired/inc/: GenericClient.h
20180619/fleXd1Wired/src/: IPCInterface.cpp  main.cpp
